--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <title>Ben Murchie Portfolio</title>
+        <link rel="stylesheet" href="style.css"/>
     </head>
     <body>
         <h1>Hello, World!</h1>
