--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
         <link rel="stylesheet" href="style.css"/>
     </head>
     <body>
-        <sq1></sq1>
-        <sq2></sq2>
-        <sq3></sq3>
-        <sq4></sq4>
+        <button id="square1"></button>
+        <button id="square2"></button>
+        <button id="square3"></button>
+        <button id="square4"></button>
     </body>
 </html>
