--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
         <button id="square2" onclick="testPlayerInput(button2)"></button>
         <button id="square3" onclick="testPlayerInput(button3)"></button>
         <button id="square4" onclick="testPlayerInput(button4)"></button>
-        <button id="readyup" onclick="produceSequence()">Start</button>
-    </body>
+        <button id="readyup" onclick="produceSequence(); initCounter()">Start</button>
+     </body>
 </html>
