--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>Ben Murchie Portfolio</title>
         <link rel="stylesheet" href="style.css"/>
-        <script src="script.js"></script>
+        <script defer src="script.js"></script>
     </head>
     <body>
         <button id="square1" onclick="testPlayerInput(button1)"></button>
